Problem 415 - add strings

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>problems</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>problems</name>
+    <name>leetcode-problems</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
 
